syntax = "proto3";

package HashTable;

option go_package = "https://github.com/MalteBlackN/29decTrial;HashTable";

service HashTable{
    rpc Put(PutRequest) returns (PutResponse);
    rpc Get(GetRequest) returns (GetResponse);
}

message PutRequest{
    int32 key = 1;
    int32 value = 2;
}

message PutResponse{
    bool success = 1;
}

message GetRequest{
    int32 key = 1;
}

message GetResponse{
    int32 value = 1;
    bool success = 2;
}

